@@ -32,7 +32,16 @@ Ended projects icon
 Activity icon
 
 #alert_icon_alt_text
-Declaration icon
+Alert icon
+
+#info_icon_alt_text
+Information icon
+
+#about_this_data_text
+About this data
+
+#about_data_quality_text
+About data quality
 
 #beige_alert_text
 d-portal.org is still in very early development and scheduled for Alpha release mid-April. Thank you for your patience! Please provide any feedback
