@@ -4,6 +4,7 @@
 {beige}
 {main_head}
 {main_countrymin}
+{data_links}
 {xml}
 {xml_data_description}
 {main_datainvestigators}
@@ -16,4 +17,13 @@
 		<p>{xml_data_description_text}</p>
 		<a class="read">{read_more_text}</a>
 	</div>
+</div>
+
+#data_links
+<div class="default about">
+	<a onclick="$('html, body').animate({scrollTop: $('.description').offset().top}, 300);return false;" class="about_data">
+		<img src="{art}info_icon.png" alt="{info_icon_alt_text}" width="15" height="15"/> {about_this_data_text}
+	</a><a href="#view=data_quality" class="about_data quality">
+		<img src="{art}alert_icon.png" alt="{alert_icon_alt_text}" width="15" height="15"/> {about_data_quality_text}
+	</a>
 </div>
