@@ -29,7 +29,14 @@
 			<div class="donors_peak"></div>
 	</div><div class="donors_head_title_wrap">
 			<div class="donors_head_title">{title_donor_text}</div>
-			<div class="donors_head_declare">{declare_title_donor_text}</div>
+			<div class="donors_head_declare">
+				<a onclick="$('html, body').animate({scrollTop: $('.description').offset().top}, 300);return false;" class="about_data">
+					<img src="{art}info_icon.png" alt="{info_icon_alt_text}" width="15" height="15"/> {about_this_data_text}
+				</a><a href="#view=data_quality" class="about_data quality">
+					<img src="{art}alert_icon.png" alt="{alert_icon_alt_text}" width="15" height="15"/> {about_data_quality_text}
+				</a>
+				<!--{declare_title_donor_text}-->
+			</div>
 		</div>
 </div>
 
