@@ -3,8 +3,9 @@ Development Portal (2014-04-03 shi)
 New graphs replace old money modules
 Fixed css for graphs
 Graph titles are links
-Clean up classes for nth-child types
+Replace nth-child types with classes for all tables
 Donor views are now in separate pages
+Added "About data" and "About data quality" links to all pages
 
 Development Portal (2014-04-02 shi)
 ==============================
